testdata/baselines/reference/submodule/compiler/nestedLoopWithOnlyInnerLetCaptured.errors.txt
nestedLoopWithOnlyInnerLetCaptured.ts(4,20): error TS18048: 'a1' is possibly 'undefined'.


==== nestedLoopWithOnlyInnerLetCaptured.ts (1 errors) ====
    declare let doSomething;
    
    for (let a1 of [])
        for (let a2 of a1.someArray)
                       ~~
!!! error TS18048: 'a1' is possibly 'undefined'.
            doSomething(() => a2);